# Obsidia

./: pyproject.toml
obsidia/: __main__.py  exceptions.py  obsidia.py
obsidia/plugins/ansible/_lib/: __init__.py
obsidia/plugins/core/_lib/: __init__.py  __main__.py
obsidia/plugins/pulumi/_lib/: __init__.py
